# founderAI

./: .gitignore  README.md  another_test.py  final_test.py  hello_world.py  improvement_test.py  pyproject.toml  simple_test.py  simple_var.py  test_founderai.py  test_improvement.py
src/: __init__.py  config.py  main.py  todo_manager.py  web_search.py
