[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "founderai"
version = "1.0.0"
description = "FounderAI - A CLI tool with file system access using Ollama with streaming responses"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "CLI Tool"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.scripts]
founderai = "src.main:main"

[project.urls]
Homepage = "https://github.com/your-username/founderai"
Repository = "https://github.com/your-username/founderai"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]